--- a/.YMLPipeline/CI/CD/azurePipeline.yml
+++ b/.YMLPipeline/CI/CD/azurePipeline.yml
@@ -1,34 +1,39 @@
 trigger:
   branches:
     include:
-      - main
-      - develop
+      - main  # Run pipeline on push to main branch
+      - develop  # Run pipeline on push to develop branch
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'windows-latest'  # Use latest Windows VM for build/test
 
 steps:
+# Step 1: Install .NET SDK
 - task: UseDotNet@2
   displayName: 'Install .NET SDK'
   inputs:
     packageType: 'sdk'
-    version: '6.x'
+    version: '8.x' # Adjust this to match your project’s .NET version
 
+# Step 3: Build the Test Project
 - script: dotnet build --configuration Release
   displayName: 'Build Test Solution'
   workingDirectory: ./Tests
 
+# Step 4: Run Unit Tests Using VSTest@3
 - task: VSTest@3
   displayName: 'Run Unit Tests'
   inputs:
     testSelector: 'testAssemblies'
-    testAssemblyVer2: '**/bin/Release/net*/samiApp1.dll'
+    testAssemblyVer2: '**/bin/Release/net*/samiApp1.dll'  # Finds the compiled test DLL
     searchFolder: '$(Build.SourcesDirectory)/Tests'
-    testFiltercriteria: 'TestCategory!=Integration'
+    testFiltercriteria: 'TestCategory!=Integration'  # Exclude integration tests
+    runSettingsFile: '$(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1/testSettings.config'
     codeCoverageEnabled: true
     platform: '$(BuildPlatform)'
     configuration: 'Release'
 
+# Step 5: Publish Test Results in Azure DevOps
 - task: PublishTestResults@2
   displayName: 'Publish Test Results'
   inputs:
@@ -36,6 +41,7 @@ steps:
     testResultsFiles: '**/TestResults/*.trx'
     mergeTestResults: true
 
+#  Step 6: Publish Code Coverage Report (Optional)
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish Code Coverage Report'
   inputs:
