--- a/.YMLPipeline/CI/CD/azurePipeline.yml
+++ b/.YMLPipeline/CI/CD/azurePipeline.yml
@@ -1,39 +1,64 @@
 trigger:
   branches:
     include:
-      - main  # Run pipeline on push to main branch
-      - develop  # Run pipeline on push to develop branch
+      - main
+      - develop
 
 pool:
-  vmImage: 'windows-latest'  # Use latest Windows VM for build/test
+  vmImage: 'windows-latest'
 
 steps:
-# Step 1: Install .NET SDK
 - task: UseDotNet@2
   displayName: 'Install .NET SDK'
   inputs:
     packageType: 'sdk'
-    version: '8.x' # Adjust this to match your project’s .NET version
+    version: '8.x' 
 
-# Step 3: Build the Test Project
 - script: dotnet build --configuration Release
   displayName: 'Build Test Solution'
   workingDirectory: ./Tests
 
-# Step 4: Run Unit Tests Using VSTest@3
+# Debug Step: Print Directory Structure and Verify `testSettings.config`
+- script: |
+    echo "======================================="
+    echo " Build.SourcesDirectory: $(Build.SourcesDirectory) "
+    echo "======================================="
+    
+    echo " Listing root directory: "
+    dir "$(Build.SourcesDirectory)"
+
+    echo " Listing Tests directory: "
+    dir "$(Build.SourcesDirectory)/Tests"
+
+    echo " Listing samiApp1 directory: "
+    dir "$(Build.SourcesDirectory)/Tests/samiApp1"
+
+    echo " Listing samiWorkflow1 directory: "
+    dir "$(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1"
+
+    echo "======================================="
+    echo " Checking if testSettings.config exists: "
+    
+    if exist "$(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1/testSettings.config" (
+      echo "testSettings.config FOUND!"
+    ) else (
+      echo "ERROR: testSettings.config NOT FOUND!"
+      exit 1
+    )
+  displayName: 'Debug: Verify testSettings.config Path'
+
 - task: VSTest@3
   displayName: 'Run Unit Tests'
   inputs:
     testSelector: 'testAssemblies'
-    testAssemblyVer2: '**/bin/Release/net*/samiApp1.dll'  # Finds the compiled test DLL
+    testAssemblyVer2: '**/bin/Release/net*/samiApp1.dll'
     searchFolder: '$(Build.SourcesDirectory)/Tests'
-    testFiltercriteria: 'TestCategory!=Integration'  # Exclude integration tests
+    testFiltercriteria: 'TestCategory!=Integration'
     runSettingsFile: '$(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1/testSettings.config'
     codeCoverageEnabled: true
     platform: '$(BuildPlatform)'
     configuration: 'Release'
 
-# Step 5: Publish Test Results in Azure DevOps
 - task: PublishTestResults@2
   displayName: 'Publish Test Results'
   inputs:
@@ -41,7 +66,6 @@ steps:
     testResultsFiles: '**/TestResults/*.trx'
     mergeTestResults: true
 
-#  Step 6: Publish Code Coverage Report (Optional)
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish Code Coverage Report'
   inputs:
