--- a/.YMLPipeline/CI/CD/azurePipeline.yml
+++ b/.YMLPipeline/CI/CD/azurePipeline.yml
@@ -39,7 +39,7 @@ steps:
 # List the build output directory for the test project assembly.
 - script: |
     echo "===== Listing Build Output Directory ====="
-    dir "$(Build.SourcesDirectory)/Tests/samiApp1/bin/Release"
+    dir "$(Build.SourcesDirectory)\Tests\samiApp1\bin\Release"
   displayName: 'Log Build Output Directory'
 
 # Debug: Print Directory Structure for key paths.
@@ -47,68 +47,63 @@ steps:
     echo "===== Directory Structure from Build.SourcesDirectory ====="
     echo "Build.SourcesDirectory: $(Build.SourcesDirectory)"
     echo "----- Root Directory (logic app project) -----"
-    dir "$(Build.SourcesDirectory)/samiApp1"
+    dir "$(Build.SourcesDirectory)\samiApp1"
     echo "----- Tests Directory -----"
-    dir "$(Build.SourcesDirectory)/Tests"
+    dir "$(Build.SourcesDirectory)\Tests"
     echo "----- Test Project Directory (samiApp1) -----"
-    dir "$(Build.SourcesDirectory)/Tests/samiApp1"
+    dir "$(Build.SourcesDirectory)\Tests\samiApp1"
     echo "----- Test Workflow Directory -----"
-    dir "$(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1"
+    dir "$(Build.SourcesDirectory)\Tests\samiApp1\samiWorkflow1"
   displayName: 'Debug: Print Directory Structure'
 
 # Verify that testSettings.config exists in the test project.
 - script: |
     echo "===== Checking for testSettings.config ====="
-    if exist "$(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1/testSettings.config" (
-      echo "testSettings.config FOUND at: $(Build.SourcesDirectory)/Tests/samiApp1/samiWorkflow1/testSettings.config"
+    if exist "$(Build.SourcesDirectory)\Tests\samiApp1\samiWorkflow1\testSettings.config" (
+      echo "testSettings.config FOUND at: $(Build.SourcesDirectory)\Tests\samiApp1\samiWorkflow1\testSettings.config"
     ) else (
       echo "ERROR: testSettings.config NOT FOUND!"
-      exit 1
     )
   displayName: 'Debug: Verify testSettings.config Path'
 
 # Verify that the key input files from the logic app project are present.
 - script: |
     echo "===== Checking for workflow.json ====="
-    if exist "$(Build.SourcesDirectory)/samiApp1/samiWorkflow1/workflow.json" (
-      echo "workflow.json FOUND at: $(Build.SourcesDirectory)/samiApp1/samiWorkflow1/workflow.json"
-      type "$(Build.SourcesDirectory)/samiApp1/samiWorkflow1/workflow.json"
+    if exist "$(Build.SourcesDirectory)\samiApp1\samiWorkflow1\workflow.json" (
+      echo "workflow.json FOUND at: $(Build.SourcesDirectory)\samiApp1\samiWorkflow1\workflow.json"
+      type "$(Build.SourcesDirectory)\samiApp1\samiWorkflow1\workflow.json"
     ) else (
       echo "ERROR: workflow.json NOT FOUND!"
-      exit 1
     )
   displayName: 'Debug: Check workflow.json'
 
 - script: |
     echo "===== Checking for connections.json ====="
-    if exist "$(Build.SourcesDirectory)/samiApp1/connections.json" (
-      echo "connections.json FOUND at: $(Build.SourcesDirectory)/samiApp1/connections.json"
-      type "$(Build.SourcesDirectory)/samiApp1/connections.json"
+    if exist "$(Build.SourcesDirectory)\samiApp1\connections.json" (
+      echo "connections.json FOUND at: $(Build.SourcesDirectory)\samiApp1\connections.json"
+      type "$(Build.SourcesDirectory)\samiApp1\connections.json"
     ) else (
       echo "ERROR: connections.json NOT FOUND!"
-      exit 1
     )
   displayName: 'Debug: Check connections.json'
 
 - script: |
     echo "===== Checking for parameters.json ====="
-    if exist "$(Build.SourcesDirectory)/samiApp1/parameters.json" (
-      echo "parameters.json FOUND at: $(Build.SourcesDirectory)/samiApp1/parameters.json"
-      type "$(Build.SourcesDirectory)/samiApp1/parameters.json"
+    if exist "$(Build.SourcesDirectory)\samiApp1\parameters.json" (
+      echo "parameters.json FOUND at: $(Build.SourcesDirectory)\samiApp1\parameters.json"
+      type "$(Build.SourcesDirectory)\samiApp1\parameters.json"
     ) else (
       echo "ERROR: parameters.json NOT FOUND!"
-      exit 1
     )
   displayName: 'Debug: Check parameters.json'
 
 - script: |
     echo "===== Checking for local.settings.json ====="
-    if exist "$(Build.SourcesDirectory)/samiApp1/local.settings.json" (
-      echo "local.settings.json FOUND at: $(Build.SourcesDirectory)/samiApp1/local.settings.json"
-      type "$(Build.SourcesDirectory)/samiApp1/local.settings.json"
+    if exist "$(Build.SourcesDirectory)\samiApp1\local.settings.json" (
+      echo "local.settings.json FOUND at: $(Build.SourcesDirectory)\samiApp1\local.settings.json"
+      type "$(Build.SourcesDirectory)\samiApp1\local.settings.json"
     ) else (
       echo "ERROR: local.settings.json NOT FOUND!"
-      exit 1
     )
   displayName: 'Debug: Check local.settings.json'
 
@@ -123,7 +118,6 @@ steps:
   displayName: 'Run Unit Tests'
   inputs:
     testSelector: 'testAssemblies'
-    # This pattern looks for the test assembly built in the test project folder.
     testAssemblyVer2: '**/bin/Release/net*/samiApp1.dll'
     searchFolder: '$(Build.SourcesDirectory)/Tests'
     testFiltercriteria: 'TestCategory!=Integration'
