--- a/Tests/nuget.config
+++ b/Tests/nuget.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <packageSources>
-        <add key="local" value="." />
-    </packageSources>
+  <packageSources>
+    <!-- Public NuGet feed -->
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <!-- Local source: This points to the current folder (i.e. the Tests folder) where your two nupkg files reside -->
+    <add key="local" value="." />
+  </packageSources>
 </configuration>
