--- a/Tests/nuget.config
+++ b/Tests/nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <packageSources>
-        <add key="local" value="." />
-    </packageSources>
+  <packageSources>
+    <clear />
+    <add key="myget.org" value="https://www.myget.org/F/azurelogicappsautomatedtesting/api/v3/index.json" />
+  </packageSources>
 </configuration>
